tests/fail/unwrap_move.stderr
tests/fail/unwrap_move.tk:9:14: error[E0438]: Use of moved value: 'r'
tests/fail/unwrap_move.tk:9:14: error[E0438]: Use of moved value: 'r'
